Fix building abstract pattern parser test on JDK 8